{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 93,
  "lineage": "5b7c697d-956c-9290-d013-8dc9cc538789",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "flask",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/91f4b598-d3ab-41dd-bc6f-1895538ad2b3/resourceGroups/terraform-demo-rg/providers/Microsoft.Network/networkInterfaces/flask-nic",
            "internal_domain_name_suffix": "ycio3sbyp2euhlx4prjt3fo3te.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "flask-ip-config",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/91f4b598-d3ab-41dd-bc6f-1895538ad2b3/resourceGroups/terraform-demo-rg/providers/Microsoft.Network/publicIPAddresses/flask-ip",
                "subnet_id": "/subscriptions/91f4b598-d3ab-41dd-bc6f-1895538ad2b3/resourceGroups/terraform-demo-rg/providers/Microsoft.Network/virtualNetworks/terraform-demo-vnet/subnets/web-subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-22-B3-A7",
            "name": "flask-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "terraform-demo-rg",
            "virtual_machine_id": "/subscriptions/91f4b598-d3ab-41dd-bc6f-1895538ad2b3/resourceGroups/terraform-demo-rg/providers/Microsoft.Compute/virtualMachines/flask-vm"
          },
          "dependencies": [
            "azurerm_public_ip.flask",
            "azurerm_resource_group.example",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.terraform_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "postgresql",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/91f4b598-d3ab-41dd-bc6f-1895538ad2b3/resourceGroups/terraform-demo-rg/providers/Microsoft.Network/networkInterfaces/postgresql-nic",
            "internal_domain_name_suffix": "ycio3sbyp2euhlx4prjt3fo3te.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "postgresql-ip-config",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/91f4b598-d3ab-41dd-bc6f-1895538ad2b3/resourceGroups/terraform-demo-rg/providers/Microsoft.Network/publicIPAddresses/postgresql-ip",
                "subnet_id": "/subscriptions/91f4b598-d3ab-41dd-bc6f-1895538ad2b3/resourceGroups/terraform-demo-rg/providers/Microsoft.Network/virtualNetworks/terraform-demo-vnet/subnets/db-subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-25-D7-E5",
            "name": "postgresql-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "terraform-demo-rg",
            "virtual_machine_id": "/subscriptions/91f4b598-d3ab-41dd-bc6f-1895538ad2b3/resourceGroups/terraform-demo-rg/providers/Microsoft.Compute/virtualMachines/postgresql-vm"
          },
          "dependencies": [
            "azurerm_public_ip.postgresql",
            "azurerm_resource_group.example",
            "azurerm_subnet.db_subnet",
            "azurerm_virtual_network.terraform_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/91f4b598-d3ab-41dd-bc6f-1895538ad2b3/resourceGroups/terraform-demo-rg/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "location": "westeurope",
            "name": "db-nsg",
            "resource_group_name": "terraform-demo-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAPPAccess",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/91f4b598-d3ab-41dd-bc6f-1895538ad2b3/resourceGroups/terraform-demo-rg/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "location": "westeurope",
            "name": "web-nsg",
            "resource_group_name": "terraform-demo-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "flask",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/91f4b598-d3ab-41dd-bc6f-1895538ad2b3/resourceGroups/terraform-demo-rg/providers/Microsoft.Network/publicIPAddresses/flask-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.160.185.73",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "flask-ip",
            "resource_group_name": "terraform-demo-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "postgresql",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/91f4b598-d3ab-41dd-bc6f-1895538ad2b3/resourceGroups/terraform-demo-rg/providers/Microsoft.Network/publicIPAddresses/postgresql-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.160.191.225",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "postgresql-ip",
            "resource_group_name": "terraform-demo-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/91f4b598-d3ab-41dd-bc6f-1895538ad2b3/resourceGroups/terraform-demo-rg/providers/Microsoft.Network/virtualNetworks/terraform-demo-vnet/subnets/db-subnet",
            "name": "db-subnet",
            "resource_group_name": "terraform-demo-rg",
            "virtual_network_name": "terraform-demo-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_virtual_network.terraform_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/91f4b598-d3ab-41dd-bc6f-1895538ad2b3/resourceGroups/terraform-demo-rg/providers/Microsoft.Network/virtualNetworks/terraform-demo-vnet/subnets/web-subnet",
            "name": "web-subnet",
            "resource_group_name": "terraform-demo-rg",
            "virtual_network_name": "terraform-demo-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_virtual_network.terraform_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "terraform_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c8ee90c0-7f38-4309-aefe-7c533e95dd9c",
            "id": "/subscriptions/91f4b598-d3ab-41dd-bc6f-1895538ad2b3/resourceGroups/terraform-demo-rg/providers/Microsoft.Network/virtualNetworks/terraform-demo-vnet",
            "location": "westeurope",
            "name": "terraform-demo-vnet",
            "resource_group_name": "terraform-demo-rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/91f4b598-d3ab-41dd-bc6f-1895538ad2b3/resourceGroups/terraform-demo-rg/providers/Microsoft.Network/virtualNetworks/terraform-demo-vnet/subnets/web-subnet",
                "name": "web-subnet"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/91f4b598-d3ab-41dd-bc6f-1895538ad2b3/resourceGroups/terraform-demo-rg/providers/Microsoft.Network/virtualNetworks/terraform-demo-vnet/subnets/db-subnet",
                "name": "db-subnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    }
  ]
}